@@ -35,7 +35,10 @@
            'icon': 'fi-plus',
            'label': 'Add Exercise',
            'href': r.route_url('part.new', new_type='exercise', _query=[('parent_id', part.id)]),
-           'highlight': True}]},
+           'highlight': True},
+          {'visible': part.allow('edit', r.current_user),
+           'label': 'Add Asset',
+           'href': r.route_url('asset.new', pid=part.id, new_type='asset')}]},
         {'group': 'importexport', 'items': [
           {'visible': part.allow('edit', r.current_user),
            'label': 'Import',
@@ -118,6 +121,30 @@
         </li>
       </ul>
     </section>
+    <section py:if="part.assets and part.has_role('owner', r.current_user)">
+      <h2>Assets</h2>
+      <ul class="no-symbol">
+        <li py:for="asset in part.assets" class="panel clearfix">
+          <div py:if="part.allow('edit', r.current_user)" class="right">
+            ${h.frontend.menubar([
+              {'group': 'edit', 'items': [
+                {'visible': True,
+                 'icon': 'fi-pencil',
+                 'label': 'Edit',
+                 'href': r.route_url('asset.edit', pid=part.id, aid=asset.id),
+                 'highlight': True}]},
+              {'group': 'delete', 'items': [
+                {'visible': True,
+                 'label': 'Delete',
+                 'href': r.route_url('asset.delete', pid=part.id, aid=asset.id),
+                 'class': 'alert post-link',
+                 'confirm': h.frontend.confirm_delete('asset', asset.filename, False)}]},
+            ])}
+          </div>
+          <h3><a href="${r.route_url('asset.view', mid=-1, pid=part.id, filename=asset.filename)}">${asset.filename} (${asset.mimetype})</a></h3>
+        </li>
+      </ul>
+      </section>
     <div>
       <py:if test="part.register_state(r.current_user) != 'already_registered'">
         <form py:if="part.register_state(r.current_user) == 'plain_register'" action="${r.route_url('part.register', pid=part.id)}" method="post">
